directory structure modified

--- a/html/signup.html
+++ b/html/signup.html
@@ -44,7 +44,7 @@
 
         <br><br>
 
-        <form action="verifyMail.php" method="post" onsubmit="return validateEmail();" autocomplete="on">
+        <form action="../verifyMail.php" method="post" onsubmit="return validateEmail();" autocomplete="on">
             <div class="div-table">
                 <div class="div-table-row">
                     <div class="div-table-col">First name:</div>
